Update: (Fixes #551) Sheet Section to account for `fieldset` not supporting margin collapse
New: (#551) Sheet added option to configure `$sheet-panel-group-margin-bottom`, `$sheet-panel-group-margin-bottom-mobile`, and tweak `.panel-group` spacing in `.sheet` to conform to `.sheet-section` spacing

--- a/packages/clay/src/scss/components/_sheets.scss
+++ b/packages/clay/src/scss/components/_sheets.scss
@@ -11,11 +11,22 @@
 	padding-right:  $sheet-padding-right;
 	padding-top: $sheet-padding-top;
 
-	.panel-group-flush .panel-body {
-		margin-bottom: $sheet-section-margin-bottom;
+	.panel-group {
+		&,
+		.panel:last-child .panel-body {
+			margin-bottom: $sheet-panel-group-margin-bottom;
 
-		@include clay-scale-component {
-			margin-bottom: $sheet-section-margin-bottom-mobile;
+			@include clay-scale-component {
+				margin-bottom: $sheet-panel-group-margin-bottom-mobile;
+			}
+		}
+
+		.panel-body {
+			margin-bottom: $sheet-section-margin-bottom;
+
+			@include clay-scale-component {
+				margin-bottom: $sheet-section-margin-bottom-mobile;
+			}
 		}
 	}
 }
@@ -37,6 +48,20 @@
 
 	@include clay-scale-component {
 		margin-bottom: $sheet-section-margin-bottom-mobile;
+	}
+
+	> fieldset {
+		margin-bottom: -$sheet-section-margin-bottom;
+
+		@include clay-scale-component {
+			margin-bottom: -$sheet-section-margin-bottom-mobile;
+		}
+	}
+}
+
+fieldset {
+	+ .sheet-footer {
+		margin-top: 0;
 	}
 }
 
