--- a/packages/clay/src/scss/variables/_sheets.scss
+++ b/packages/clay/src/scss/variables/_sheets.scss
@@ -12,15 +12,16 @@ $sheet-padding-top: 1.5rem !default; // 24px
 
 // Sheet Header
 
-$sheet-header-margin-bottom: 3rem !default; // 24px
-
+$sheet-header-margin-bottom: 3rem !default; // 48px
 $sheet-header-margin-bottom-mobile: null !default;
 
 // Sheet Section
 
-$sheet-section-margin-bottom: 3rem !default; // 24px
-
+$sheet-section-margin-bottom: 3rem !default; // 48px
 $sheet-section-margin-bottom-mobile: null !default;
+
+$sheet-panel-group-margin-bottom: 1.5rem !default; // 24px
+$sheet-panel-group-margin-bottom-mobile: null !default;
 
 // Sheet Footer
 
